--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
+    "require": {
+    },
     "require-dev": {
-        "phpunit/phpunit": "3.7.21"
+        "phpunit/phpunit": "3.7.14"
+    },
+    "autoload": {
+        "psr-0": {
+            "phpUnitTutorial": ""
+        }
     }
 }
