Updating to add bootstrap

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     },
     "require": {
         "monolog/monolog": "1.7.0",
-        "swiftmailer/swiftmailer": "v5.0.3"
+        "swiftmailer/swiftmailer": "v5.0.3",
+        "twitter/bootstrap": "v3.1.1"
     }
 }
