--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
     },
     "require": {
         "monolog/monolog": "1.7.0",
-        "swiftmailer/swiftmailer": "v5.0.3",
-        "twitter/bootstrap": "v3.1.1"
+        "swiftmailer/swiftmailer": "v5.0.3"
     }
 }
